@startuml

title __WINDOWSEXPLORER's Class Diagram__\n

  namespace  {
    namespace PP {
      class APP.JFileManager {
      }
    }
  }
  

  namespace  {
    namespace lient {
      class Client.ReceiverClient {
      }
    }
  }
  

  namespace  {
    namespace lient {
      class Client.SenderClient {
      }
    }
  }
  

  namespace  {
    namespace ontroller {
      class Controller.Controller {
      }
    }
  }
  

  namespace  {
    namespace emento {
      class Memento.CareTaker {
      }
    }
  }
  

  namespace  {
    namespace emento {
      class Memento.Memento {
      }
    }
  }
  

  namespace  {
    namespace emento {
      class Memento.Originator {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Model {
      }
    }
  }
  

  namespace  {
    class MultiServer {
    }
  }
  

  namespace  {
    class MultiServer {
    }
  }
  

  namespace  {
    class ReceiverClient {
    }
  }
  

  namespace  {
    class ReceiverClient {
    }
  }
  

  namespace  {
    class SenderClient {
    }
  }
  

  namespace  {
    class SenderClient {
    }
  }
  

  namespace  {
    class ServerReader {
    }
  }
  

  namespace  {
    class ServerReader {
    }
  }
  

  namespace  {
    class ServerWriter {
    }
  }
  

  namespace  {
    class ServerWriter {
    }
  }
  

  namespace  {
    namespace iew {
      class View.AboutMe {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.FileTableModel {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.GridEmptySpacePopMenu {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.Help {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.OptionPane {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.PopMenu {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.MyProgressBar {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.Settings {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class View.View {
      }
    }
  }
  

  Controller.Controller o-- Controller.Controller.DrawRect : drawRect
  Controller.Controller o-- Controller.Controller.FrameKeyListener : frameKeyListener
  Controller.Controller o-- Model.Model : myModel
  Controller.Controller o-- View.View : myView
  Memento.CareTaker o-- Memento.Originator : originator
  Memento.Originator o-- Controller.Controller : controller
  Memento.Originator o-- Model.Model : model
  Memento.Originator o-- View.View : view
  Model.Model o-- Memento.CareTaker : careTaker
  View.FileTableModel -up-|> javax.swing.table.AbstractTableModel
  View.GridEmptySpacePopMenu -up-|> javax.swing.JPopupMenu
  View.PopMenu -up-|> javax.swing.JPopupMenu
  View.View .up.|> java.awt.event.FocusListener
  View.View -up-|> javax.swing.JFrame
  View.View o-- View.FileTableModel : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
